--- a/client/app.json
+++ b/client/app.json
@@ -18,8 +18,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff",
-        "permissions": [ "INTERNET" ]
+        "backgroundColor": "#ffffff"
       },
       "package": "com.kasimxo.kasflightclient"
     },
