--- a/client/app.json
+++ b/client/app.json
@@ -20,6 +20,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "permissions": [ "INTERNET" ],
       "package": "com.kasimxo.kasflightclient"
     },
     "web": {
