--- a/client/app.json
+++ b/client/app.json
@@ -20,7 +20,11 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "permissions": [ "INTERNET" ],
+      "permissions": [ 
+        "INTERNET",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ],
       "config": {
         "googleMaps": {
           "apiKey": "AlzaSyD7QK0ACRlSwwy6kTGByYiB-nxAazRDay0"
