Removed temporal Api key + Changed favicon and app icon

--- a/client/app.json
+++ b/client/app.json
@@ -27,7 +27,7 @@
       ],
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyD7QK0ACRlSwwy6kTGByYiB-nxAazRDay0"
+          "apiKey": ""
         }
       },
       "package": "com.kasimxo.kasflightclient"
