--- a/client/app.json
+++ b/client/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "kas-flight",
     "scheme": "kas-flight",
-    "slug": "kas-flight",
+    "slug": "kas-flight-client",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
