--- a/client/app.json
+++ b/client/app.json
@@ -25,6 +25,11 @@
         "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION"
       ],
+      "config": {
+        "googleMaps": {
+          "apiKey": "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY"
+        }
+      },
       "package": "com.kasimxo.kasflight"
     },
     "web": {
